# ctypes-test

./: .gitignore  README.md  bar.ml  bar.opam  dune  function_description.ml  type_description.ml
libfoo/: .gitignore  Makefile  foo.c  foo.h
